--- a/nine_cats/app/views/layouts/application.html.erb
+++ b/nine_cats/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+    <% if logged_in? %>
+      <h1>Welcome, <%= current_user.username %>!</h1>
+      <%= button_to "Log out", session_url, method: :delete %>
+    <% else %>
+      <%= button_to "Log in", new_session_url, method: :get %>
+      <%= button_to "Sign up", new_user_url, method: :get %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
